--- a/upload.html
+++ b/upload.html
@@ -146,8 +146,7 @@
                             <option value="0">Pilih program</option>
                             <option value="1">JKK-JKM</option>
                             <option value="2">JKK-JKM-DPR</option>
-                            <option value="3">IURAN</option>
-                            <option value="4">Something Else</option>
+                            <option value="3">IWP</option>
                           </select>
                         </div>
                       </div>
@@ -158,10 +157,9 @@
                         <div class="col-md-9 col-form-label">
                           <select class="form-control" id="ccsetoran">
                             <option value="0">Pilih jenis setoran</option>
-                            <option value="1">JKK-JKM</option>
-                            <option value="2">JKK-JKM-DPR</option>
-                            <option value="3">IURAN</option>
-                            <option value="4">Something Else</option>
+                            <option value="1">Induk</option>
+                            <option value="2">Susulan</option>
+                            <option value="3">Rapel</option>
                           </select>
                         </div>
                       </div>
