--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -133,16 +133,125 @@
           <div class="container-fluid">
             <div class="fade-in">
               <div class="card">
+                <div class="card-header">
+                  <i class="fa fa-align-justify"></i> Daftar Rekonsiliasi
+                </div>
                 <div class="card-body">
-                  <div class="jumbotron jumbotron-fluid">
-                    <div class="container">
-                      <h1 class="display-3">E-Rekonsiliasi</h1>
-                      <p class="lead">
-                        Selamat datang di portal Taspen untuk keperluan
-                        rekonsiliasi.
-                      </p>
-                    </div>
-                  </div>
+                  <table class="table table-responsive-sm">
+                    <thead>
+                      <tr>
+                        <th>Program</th>
+                        <th>Pemkab</th>
+                        <th>Periode</th>
+                        <th>Status</th>
+                        <th>Aksi</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>JKK</td>
+                        <td>Pemkab A</td>
+                        <td>Juni 2021</td>
+                        <td>
+                          <span class="badge badge-warning"
+                            >Menunggu approval Pemkab</span
+                          >
+                        </td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>JKM</td>
+                        <td>Pemkab B</td>
+                        <td>Juni 2021</td>
+                        <td>
+                          <span class="badge badge-success">Selesai</span>
+                        </td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>JKK-DPR</td>
+                        <td>Pemkab A</td>
+                        <td>Juni 2021</td>
+                        <td>
+                          <span class="badge badge-warning"
+                            >Menunggu approval Manager Taspen</span
+                          >
+                        </td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>JKK</td>
+                        <td>Pemkab A</td>
+                        <td>Mei 2021</td>
+                        <td>
+                          <span class="badge badge-warning"
+                            >Menunggu approval Kacab</span
+                          >
+                        </td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>JKM-DPR</td>
+                        <td>Pemkab A</td>
+                        <td>Juni 2021</td>
+                        <td>
+                          <span class="badge badge-danger">Ditolak</span>
+                        </td>
+                        <td>
+                          <button
+                            class="btn btn-sm btn-primary"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Lihat
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <ul class="pagination">
+                    <li class="page-item">
+                      <a class="page-link" href="#">Prev</a>
+                    </li>
+                    <li class="page-item active">
+                      <a class="page-link" href="#">1</a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="#">Next</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
