--- a/keuangan.html
+++ b/keuangan.html
@@ -60,9 +60,14 @@
             <i class="c-sidebar-nav-icon cil-calculator"></i> Keuangan
           </a>
         </li>
-        <li class="c-sidebar-nav-item inactive">
+        <li class="c-sidebar-nav-item">
           <a href="kepesertaan.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-group"></i> Kepesertaan
+          </a>
+        </li>
+        <li class="c-sidebar-nav-item">
+          <a href="setoran.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor Pemkab
           </a>
         </li>
         <li class="c-sidebar-nav-item">
