--- a/setoran1.html
+++ b/setoran1.html
@@ -51,27 +51,22 @@
       </div>
       <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-item">
-          <a href="dashboard.html" class="c-sidebar-nav-link">
+          <a href="dashboard1.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-home"></i> Home
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="keuangan.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-calculator"></i> Keuangan
+          <a href="setoran1.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="kepesertaan.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-group"></i> Kepesertaan
+          <a href="upload.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-cloud-upload"></i> Submit
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="setoran.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor Pemkab
-          </a>
-        </li>
-        <li class="c-sidebar-nav-item">
-          <a href="rekonsiliasi.html" class="c-sidebar-nav-link">
+          <a href="rekonsiliasi1.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-check"></i> Rekonsiliasi
           </a>
         </li>
@@ -146,7 +141,6 @@
                     <thead>
                       <tr>
                         <th>Program</th>
-                        <th>Pemkab</th>
                         <th>Jenis Setoran</th>
                         <th>Tanggal Setor</th>
                         <th>Jumlah</th>
@@ -158,7 +152,6 @@
                     <tbody>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
                         <td>Rp 500.000.000</td>
@@ -176,7 +169,6 @@
                       </tr>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
                         <td>Rp 200.000.000</td>
@@ -194,7 +186,6 @@
                       </tr>
                       <tr>
                         <td>JKK-DPR</td>
-                        <td>Pemkab 1</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
                         <td>Rp 500.000.000</td>
@@ -212,7 +203,6 @@
                       </tr>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
                         <td>Susulan</td>
                         <td>4 Juni 2021</td>
                         <td>Rp 50.000.000</td>
@@ -230,7 +220,6 @@
                       </tr>
                       <tr>
                         <td>JKK</td>
-                        <td>Pemkab 1</td>
                         <td>Rapel</td>
                         <td>4 Juni 2021</td>
                         <td>Rp 500.000.000</td>
