--- a/kepesertaan.html
+++ b/kepesertaan.html
@@ -66,6 +66,11 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item">
+          <a href="setoran.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor Pemkab
+          </a>
+        </li>
+        <li class="c-sidebar-nav-item">
           <a href="rekonsiliasi.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-check"></i> Rekonsiliasi
           </a>
