--- a/upload.html
+++ b/upload.html
@@ -56,7 +56,7 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="setoran.html" class="c-sidebar-nav-link">
+          <a href="setoran1.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor
           </a>
         </li>
